Add accounts controller
